#50 Use Stream.toList() instead of collect(Collectors.toList())
java:S6204 — replaces 12 occurrences (10 in EditController, 1 each in
PlaylistTreeView and TrackQueueListCell). All resulting lists are
read-only at their call sites; no toCollection downgrade needed. Also
removed now-unused Collectors / static toList imports to avoid
introducing fresh S1128 issues.